Добавляет другую полоску

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -236,9 +236,9 @@
           </li>
         </ul>
       </section>
-      <section class="additional">
+      <section class="additional wrapper">
         <h3 class="additional__title title title--stripe">Дополнительные товары</h3>
-        <ul class="additional__list wrapper">
+        <ul class="additional__list">
           <li class="additional__item">
             <h2 class="additional__product"><a href="#">Сахарозаменитель</a></h2>
             <span class="additional__text">1 упаковка (100 г)</span>
