--- a/source/catalog.html
+++ b/source/catalog.html
@@ -236,38 +236,40 @@
           </li>
         </ul>
       </section>
-      <section class="additional wrapper">
+      <section class="additional">
         <h3 class="additional__title title title--stripe">Дополнительные товары</h3>
-        <ul class="additional__list">
-          <li class="additional__item">
-            <h2 class="additional__product"><a href="#">Сахарозаменитель</a></h2>
-            <span class="additional__text">1 упаковка (100 г)</span>
-            <span class="additional__text">100 Р.</span>
-            <a class="button additional__button" href="#">Заказать</a>
-          </li>
-          <li class="additional__item">
-            <h2 class="additional__product"><a href="#">Питьевая вода</a></h2>
-            <span class="additional__text">5 литров</span>
-            <span class="additional__text">50 Р.</span>
-            <a class="button additional__button" href="#">Заказать</a>
-          </li>
-          <li class="additional__item">
-            <h2 class="additional__product"><a href="#">Молоко</a></h2>
-            <span class="additional__text">1 литр</span>
-            <span class="additional__text">100 Р.</span>
-            <a class="button additional__button" href="#">Заказать</a>
-          </li>
-          <li class="additional__item">
-            <h2 class="additional__product"><a href="#">Витамины</a></h2>
-            <span class="additional__text">1 упаковка (30 г)</span>
-            <span class="additional__text">300 Р.</span>
-            <a class="button additional__button" href="#">Заказать</a>
-          </li>
-        </ul>
-        <div class="additional__bonus">
-          <p class="additional__action">
-            <span>Закажите все и получите чехол для кота в подарок!</span>
-          </p>
+        <div class="additional__wrapper">
+          <ul class="additional__list">
+            <li class="additional__item">
+              <h2 class="additional__product"><a href="#">Сахарозаменитель</a></h2>
+              <span class="additional__text">1 упаковка (100 г)</span>
+              <span class="additional__text">100 Р.</span>
+              <a class="button additional__button" href="#">Заказать</a>
+            </li>
+            <li class="additional__item">
+              <h2 class="additional__product"><a href="#">Питьевая вода</a></h2>
+              <span class="additional__text">5 литров</span>
+              <span class="additional__text">50 Р.</span>
+              <a class="button additional__button" href="#">Заказать</a>
+            </li>
+            <li class="additional__item">
+              <h2 class="additional__product"><a href="#">Молоко</a></h2>
+              <span class="additional__text">1 литр</span>
+              <span class="additional__text">100 Р.</span>
+              <a class="button additional__button" href="#">Заказать</a>
+            </li>
+            <li class="additional__item">
+              <h2 class="additional__product"><a href="#">Витамины</a></h2>
+              <span class="additional__text">1 упаковка (30 г)</span>
+              <span class="additional__text">300 Р.</span>
+              <a class="button additional__button" href="#">Заказать</a>
+            </li>
+          </ul>
+          <div class="additional__bonus">
+            <p class="additional__action">
+              <span>Закажите все и получите чехол для кота в подарок!</span>
+            </p>
+          </div>
         </div>
       </section>
       <section class="map">
@@ -287,44 +289,46 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__logo">
-        <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
+      <div class="footer__wrapper">
+        <div class="footer__logo">
+          <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
+        </div>
+        <section class="social footer__social">
+          <h2 class="visually-hidden">Соцсети</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+                <svg class="social__link social__link--vk" width="22" height="12">
+                  <use xlink:href="#vk-small"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--inst" href="#">
+                <span class="visually-hidden">Инстаграм</span>
+                <svg class="social__link social__link--inst" width="17" height="16">
+                  <use xlink:href="#inst-small"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg class="social__link social__link--fb" width="10" height="19">
+                  <use xlink:href="#fb-small"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="footer__text">HTML Academy</span>
+          <svg class="footer__icon" width="27" height="34">
+            <use xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
-      <section class="social footer__social">
-        <h2 class="visually-hidden">Соцсети</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <span class="visually-hidden">Вконтакте</span>
-              <svg class="social__link social__link--vk" width="22" height="12">
-                <use xlink:href="#vk-small"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--inst" href="#">
-              <span class="visually-hidden">Инстаграм</span>
-              <svg class="social__link social__link--inst" width="17" height="16">
-                <use xlink:href="#inst-small"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-              <svg class="social__link social__link--fb" width="10" height="19">
-                <use xlink:href="#fb-small"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__text">HTML Academy</span>
-        <svg class="footer__icon" width="27" height="34">
-          <use xlink:href="#htmlacademy"></use>
-        </svg>
-      </a>
     </footer>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     <script src="js/script.js"></script>
