--- a/source/index.html
+++ b/source/index.html
@@ -138,44 +138,46 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__logo">
-        <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
+      <div class="footer__wrapper">
+        <div class="footer__logo">
+          <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
+        </div>
+        <section class="social footer__social">
+          <h2 class="visually-hidden">Соцсети</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+                <svg class="social__link social__link--vk" width="22" height="12">
+                  <use xlink:href="#vk-small"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--inst" href="#">
+                <span class="visually-hidden">Инстаграм</span>
+                <svg class="social__link social__link--inst" width="17" height="16">
+                  <use xlink:href="#inst-small"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <svg class="social__link social__link--fb" width="10" height="19">
+                  <use xlink:href="#fb-small"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="footer__text">HTML Academy</span>
+          <svg class="footer__icon" width="27" height="34">
+            <use xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
-      <section class="social footer__social">
-        <h2 class="visually-hidden">Соцсети</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <span class="visually-hidden">Вконтакте</span>
-              <svg class="social__link social__link--vk" width="22" height="12">
-                <use xlink:href="#vk-small"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--inst" href="#">
-              <span class="visually-hidden">Инстаграм</span>
-              <svg class="social__link social__link--inst" width="17" height="16">
-                <use xlink:href="#inst-small"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-              <svg class="social__link social__link--fb" width="10" height="19">
-                <use xlink:href="#fb-small"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <span class="footer__text">HTML Academy</span>
-        <svg class="footer__icon" width="27" height="34">
-          <use xlink:href="#htmlacademy"></use>
-        </svg>
-      </a>
     </footer>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     <script src="js/script.js"></script>
