--- a/source/catalog.html
+++ b/source/catalog.html
@@ -22,18 +22,20 @@
             <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
           </picture>
         </a>
-        <ul class="navigation__list navigation__list--opened">
+        <div class ="navigation__inner navigation__inner--opened">
           <button class="navigation__toggle" type="button"></button>
-          <li class="navigation__item">
-            <a class="navigation__link" href="index.html">Главная</a>
-          </li>
-          <li class="navigation__item navigation__item--active">
-            <a class="navigation__link">Каталог продукции</a>
-          </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link">Каталог продукции</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main class="main">
