--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,27 +17,27 @@
     </svg>
     <header class="header">
       <nav class="navigation navigation--wrapper">
-        <a class="navigation__logo">
-          <picture>
-            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
-          </picture>
-        </a>
-        <div class ="navigation__inner navigation__inner--opened">
+        <div class="navigation__logo">
+          <a class="navigation__logo-link" href="index.html">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
+            </picture>
+          </a>
           <button class="navigation__toggle" type="button"></button>
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a class="navigation__link" href="index.html">Главная</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link">Каталог продукции</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
         </div>
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link">Каталог продукции</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main class="main">
@@ -335,6 +335,7 @@
       </div>
     </footer>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script src="js/picturefill.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
