--- a/source/form.html
+++ b/source/form.html
@@ -19,27 +19,27 @@
     </svg>
     <header class="header">
       <nav class="navigation navigation--wrapper">
-        <a class="navigation__logo">
-          <picture>
-            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
-          </picture>
-        </a>
-        <div class ="navigation__inner navigation__inner--opened">
+        <div class="navigation__logo">
+          <a class="navigation__logo-link" href="index.html">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
+            </picture>
+          </a>
           <button class="navigation__toggle" type="button"></button>
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a class="navigation__link" href="index.html">Главная</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link">Подбор программы</a>
-            </li>
-          </ul>
         </div>
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main class="main">
@@ -50,24 +50,24 @@
           <ul class="form__list form__list--cat-data">
             <li class="form__item">
               <label class="form__label">Имя:*
-                <input class="form__input" type="text" name="name" placeholder="Барсик" required>
+                <input class="form__input form__input--name" type="text" name="name" placeholder="Барсик" required>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">Вес(кг):*
-                <input class="form__input" type="text" name="weight" placeholder="7" required>
+              <label class="form__label">Вес (кг):*
+                <input class="form__input form__input--weight" type="text" name="weight" placeholder="7" required>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">Возраст(лет):
-                <input class="form__input" type="text" name="age" placeholder="7">
+              <label class="form__label">Возраст (лет):
+                <input class="form__input form__input--age" type="text" name="age" placeholder="7">
               </label>
             </li>
           </ul>
           <ul class="form__list form__list--program wrapper">
             <li class="form__item">
               <label class="form__label">
-                <input class="visually-hidden" type="radio" name="program" value="slim">
+                <input class="visually-hidden" type="radio" name="program" value="slim" checked>
                 <span class="form__radio">Похудение</span>
               </label>
             </li>
@@ -196,6 +196,8 @@
         </a>
       </div>
     </footer>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script src="js/picturefill.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
