Добавляет pixel-perfect мобильной формы

--- a/source/form.html
+++ b/source/form.html
@@ -49,17 +49,17 @@
           <p class="form__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
           <ul class="form__list form__list--cat-data">
             <li class="form__item">
-              <label class="form__label">Имя:*
+              <label class="form__label form__label--name">Имя:*
                 <input class="form__input form__input--name" type="text" name="name" placeholder="Барсик" required>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">Вес (кг):*
+              <label class="form__label form__label-weight">Вес (кг):*
                 <input class="form__input form__input--weight" type="text" name="weight" placeholder="7" required>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">Возраст (лет):
+              <label class="form__label form__label--age">Возраст (лет):
                 <input class="form__input form__input--age" type="text" name="age" placeholder="7">
               </label>
             </li>
