--- a/source/form.html
+++ b/source/form.html
@@ -84,7 +84,7 @@
               </label>
             </li>
           </ul>
-          <h2 class="form__title title title--stripe">Контактные данные<br>(владельца кота)</h2>
+          <h2 class="form__title title title--stripe">Контактные данные<br><span> (владельца кота)</span></h2>
           <div class="form__wrapper form__wrapper--owner-data">
             <label class="form__label">E-mail:*
               <input class="form__input form__input--mail" type="email" name="email" placeholder="kuklachev@gmail.com" required>
@@ -165,7 +165,7 @@
             <li class="social__item">
               <a class="social__link social__link--vk" href="#">
                 <span class="visually-hidden">Вконтакте</span>
-                <svg class="social__link social__link--vk" width="22" height="12">
+                <svg class="social__svg social__svg--vk" width="22" height="12">
                   <use xlink:href="#vk-small"></use>
                 </svg>
               </a>
@@ -173,7 +173,7 @@
             <li class="social__item">
               <a class="social__link social__link--inst" href="#">
                 <span class="visually-hidden">Инстаграм</span>
-                <svg class="social__link social__link--inst" width="17" height="16">
+                <svg class="social__svg social__svg--inst" width="17" height="16">
                   <use xlink:href="#inst-small"></use>
                 </svg>
               </a>
@@ -181,7 +181,7 @@
             <li class="social__item">
               <a class="social__link social__link--fb" href="#">
                 <span class="visually-hidden">Фейсбук</span>
-                <svg class="social__link social__link--fb" width="10" height="19">
+                <svg class="social__svg social__svg--fb" width="10" height="19">
                   <use xlink:href="#fb-small"></use>
                 </svg>
               </a>
