--- a/source/catalog.html
+++ b/source/catalog.html
@@ -303,7 +303,7 @@
             <li class="social__item">
               <a class="social__link social__link--vk" href="#">
                 <span class="visually-hidden">Вконтакте</span>
-                <svg class="social__link social__link--vk" width="22" height="12">
+                <svg class="social__svg social__svg--vk" width="22" height="12">
                   <use xlink:href="#vk-small"></use>
                 </svg>
               </a>
@@ -311,7 +311,7 @@
             <li class="social__item">
               <a class="social__link social__link--inst" href="#">
                 <span class="visually-hidden">Инстаграм</span>
-                <svg class="social__link social__link--inst" width="17" height="16">
+                <svg class="social__svg social__svg--inst" width="17" height="16">
                   <use xlink:href="#inst-small"></use>
                 </svg>
               </a>
@@ -319,7 +319,7 @@
             <li class="social__item">
               <a class="social__link social__link--fb" href="#">
                 <span class="visually-hidden">Фейсбук</span>
-                <svg class="social__link social__link--fb" width="10" height="19">
+                <svg class="social__svg social__svg--fb" width="10" height="19">
                   <use xlink:href="#fb-small"></use>
                 </svg>
               </a>
