--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <!-- <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
-    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font"> -->
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class ="no-js">
@@ -148,7 +148,7 @@
             <li class="social__item">
               <a class="social__link social__link--vk" href="#">
                 <span class="visually-hidden">Вконтакте</span>
-                <svg class="social__link social__link--vk" width="22" height="12">
+                <svg class="social__svg social__svg--vk" width="22" height="12">
                   <use xlink:href="#vk-small"></use>
                 </svg>
               </a>
@@ -156,7 +156,7 @@
             <li class="social__item">
               <a class="social__link social__link--inst" href="#">
                 <span class="visually-hidden">Инстаграм</span>
-                <svg class="social__link social__link--inst" width="17" height="16">
+                <svg class="social__svg social__svg--inst" width="17" height="16">
                   <use xlink:href="#inst-small"></use>
                 </svg>
               </a>
@@ -164,7 +164,7 @@
             <li class="social__item">
               <a class="social__link social__link--fb" href="#">
                 <span class="visually-hidden">Фейсбук</span>
-                <svg class="social__link social__link--fb" width="10" height="19">
+                <svg class="social__svg social__svg--fb" width="10" height="19">
                   <use xlink:href="#fb-small"></use>
                 </svg>
               </a>
