--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
           <div class="slider__image-wrap slider__image-wrap--after">
             <picture>
               <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
-              <img class="slider__image" src="img/before-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="После">
+              <img class="slider__image slider__image--after" src="img/before-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="После">
             </picture>
           </div>
           <div class="slider__control">
