--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
             <img class="basic__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Корм Cat Energy Pro">
           </picture>
-          <a class="button basic__button" href="#">Подобрать программу</a>
+          <a class="button button--index basic__button" href="#">Подобрать программу</a>
         </section>
       </div>
     </header>
