--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="navigation navigation--wrapper">
         <div class="navigation__logo">
-          <a class="navigation__logo-link" href="index.html">
+          <a class="navigation__logo-link" href="index.html" aria-label="Переход на главную">
             <picture>
               <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -69,7 +69,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -96,7 +96,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -123,7 +123,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -150,7 +150,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -177,7 +177,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -204,7 +204,7 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <a class="catalog__image" href="#">
@@ -231,12 +231,12 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="#">Заказать</a>
+            <a class="button catalog__button" href="product.html">Заказать</a>
           </li>
           <li class="catalog__item">
             <h2 class="catalog__product"><a href="#">Показать еще 100500 товаров</a></h2>
             <p class="catalog__cell">На самом деле вкусов гораздо больше!</p>
-            <a class="button button--grey catalog__button" href="#">Показать все</a>
+            <a class="button button--grey catalog__button" href="more.html">Показать все</a>
           </li>
         </ul>
       </section>
@@ -296,9 +296,9 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__logo">
+        <a class="footer__logo" href="index.html" aria-label="Переход на главную">
           <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
-        </div>
+        </a>
         <section class="social footer__social">
           <h2 class="visually-hidden">Соцсети</h2>
           <ul class="social__list">
@@ -328,7 +328,7 @@
             </li>
           </ul>
         </section>
-        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на страницу Академии">
           <span class="footer__text">HTML Academy</span>
           <svg class="footer__icon" width="27" height="34">
             <use xlink:href="#htmlacademy"></use>
