--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav class="navigation navigation--wrapper">
         <div class="navigation__logo">
-          <a class="navigation__logo-link" href="index.html">
+          <a class="navigation__logo-link" href="index.html" aria-label="Переход на главную">
             <picture>
               <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -158,9 +158,9 @@
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__logo">
+        <a class="footer__logo" href="index.html" aria-label="Переход на главную">
           <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
-        </div>
+        </a>
         <section class="social footer__social">
           <h2 class="visually-hidden">Соцсети</h2>
           <ul class="social__list">
@@ -190,7 +190,7 @@
             </li>
           </ul>
         </section>
-        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="footer__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на страницу Академии">
           <span class="footer__text">HTML Academy</span>
           <svg class="footer__icon" width="27" height="34">
             <use xlink:href="#htmlacademy"></use>
