--- a/source/index.html
+++ b/source/index.html
@@ -102,12 +102,14 @@
           <input class="visually-hidden slider__input slider__input--after" id="slider-after" type="radio" name="slider">
           <div class="slider__image-wrap slider__image-wrap--before">
             <picture>
+              <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
               <img class="slider__image" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="До">
             </picture>
           </div>
           <div class="slider__image-wrap slider__image-wrap--after">
             <picture>
+              <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
               <img class="slider__image slider__image--after" src="img/before-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="После">
             </picture>
