--- a/source/form.html
+++ b/source/form.html
@@ -50,12 +50,12 @@
           <ul class="form__list form__list--cat-data">
             <li class="form__item">
               <label class="form__label form__label--name">Имя:*
-                <input class="form__input form__input--name" type="text" name="name" placeholder="Барсик" required>
+                <input class="form__input form__input--name" type="text" name="name" placeholder="Барсик">
               </label>
             </li>
             <li class="form__item">
               <label class="form__label form__label-weight">Вес (кг):*
-                <input class="form__input form__input--weight" type="text" name="weight" placeholder="7" required>
+                <input class="form__input form__input--weight" type="text" name="weight" placeholder="7">
               </label>
             </li>
             <li class="form__item">
@@ -87,13 +87,13 @@
           <h2 class="form__title title title--stripe">Контактные данные<br><span> (владельца кота)</span></h2>
           <div class="form__wrapper form__wrapper--owner-data">
             <label class="form__label">E-mail:*
-              <input class="form__input form__input--mail" type="email" name="email" placeholder="kuklachev@gmail.com" required>
+              <input class="form__input form__input--mail" type="email" name="email" placeholder="kuklachev@gmail.com">
               <svg class="form__icon" width="17" height="13">
                 <use xlink:href="#mail"></use>
               </svg>
             </label>
             <label class="form__label">Телефон:*
-              <input class="form__input form__input--phone" type="tel" name="phone" placeholder="8 (960) 900-60-90" required>
+              <input class="form__input form__input--phone" type="tel" name="phone" pattern="^[ 0-9]+$" placeholder="8 (960) 900-60-90">
               <svg class="form__icon" width="20" height="20">
                 <use xlink:href="#phone"></use>
               </svg>
