--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
             <img class="basic__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Корм Cat Energy Pro">
           </picture>
-          <a class="button button--index basic__button" href="#">Подобрать программу</a>
+          <a class="button button--index basic__button" href="form.html">Подобрать программу</a>
         </section>
       </div>
     </header>
@@ -65,12 +65,12 @@
             <li class="programs__item">
               <h3 class="programs__title programs__title--slim">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="programs__link" href="#">Каталог Slim</a>
+              <a class="programs__link" href="catalog.html">Каталог Slim</a>
             </li>
             <li class="programs__item">
               <h3 class="programs__title programs__title--pro">Набор массы</h3>
               <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!</p>
-              <a class="programs__link" href="#">Каталог pro</a>
+              <a class="programs__link" href="catalog.html">Каталог pro</a>
             </li>
           </ul>
         </section>
