--- a/source/catalog.html
+++ b/source/catalog.html
@@ -292,7 +292,7 @@
           </ul>
           <div class="additional__bonus">
             <p class="additional__action">
-              <span>Закажите все и получите чехол для кота в подарок!</span>
+              <span>Закажите все<br> и получите чехол для кота в подарок!</span>
             </p>
           </div>
         </div>
