--- a/source/index.html
+++ b/source/index.html
@@ -80,7 +80,7 @@
             <li class="function__item">Функциональное питание содержит только полезные питательные вещества.</li>
             <li class="function__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
             <li class="function__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="function__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+            <li class="function__item">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</li>
           </ul>
         </section>
       </div>
