--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,7 +53,7 @@
             </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy PRO 500 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy PRO 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -83,7 +83,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy PRO 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy PRO 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -113,7 +113,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy PRO 500 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy PRO 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -143,7 +143,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy PRO 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy PRO 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -173,7 +173,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 500 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy SLIM 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -203,7 +203,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy SLIM 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
@@ -233,7 +233,7 @@
               </picture>
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 500 г</a></h2>
+              <h2 class="catalog__product"><a href="product.html">Cat Energy SLIM 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="catalog__row">
                   <td class="catalog__cell">Объем</td>
